[package]
name = "hascan"
version = "0.1.0"
edition = "2021"



[dependencies]
rusqlite = "0.32.1"
# hacash = { git = "https://github.com/hacash/rust", package = "hacash"}
hacash = { path = "../rust", package = "hacash"}


[profile.release]
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

